added program to supervisord.conf

--- a/web/supervisord.conf
+++ b/web/supervisord.conf
@@ -12,3 +12,9 @@ command=/opt/venv/bin/python3 /usr/local/apache2/cgi-bin/led_ws_server.py
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+
+[program:save_lead]
+command=/opt/venv/bin/python3 /usr/local/apache2/cgi-bin/save_lead.py
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
