added server name, supervisord.conf added root privi, Change stdout/stderr logs to avoid Illegal seek warnings

--- a/web/supervisord.conf
+++ b/web/supervisord.conf
@@ -1,11 +1,12 @@
 [supervisord]
 nodaemon=true
+user=root
 
 [program:httpd]
 command=/usr/local/bin/httpd-foreground
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/httpd.log
+stderr_logfile=/var/log/httpd.err.log
 
 [program:websocket]
 command=/opt/venv/bin/python3 /usr/local/apache2/cgi-bin/led_ws_server.py
