--- a/web/supervisord.conf
+++ b/web/supervisord.conf
@@ -17,5 +17,5 @@ stderr_logfile=/dev/stderr
 [program:save_lead]
 command=/opt/venv/bin/python3 /usr/local/apache2/cgi-bin/save_lead.py
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/save_lead.log
+stderr_logfile=/var/log/save_lead.log
