try to automatically launch flask using supervisord.conf

--- a/web/supervisord.conf
+++ b/web/supervisord.conf
@@ -2,6 +2,13 @@
 nodaemon=true
 user=root
 
+[unix_http_server]
+file=/tmp/supervisor.sock
+chmod=0700
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
 [program:httpd]
 command=/usr/local/bin/httpd-foreground
 autorestart=true
